--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
-.App {
-  background-color: #fefefe;
-  height: 100%;
-  width: 100%;
+
+*{
+  margin: o;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
+.content-container {
+  margin:  0 ;
+  padding: 3px 0;
+  height: 90px;
+  background: #0e1338;
+ 
+}   
