--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,19 @@
   box-sizing: border-box;
   
 }
-.content-container {
+.content-containerr {
   margin:  0 ;
   padding: 3px 0;
   height: 90px;
   background: #0e1338;
+  position: fixed;
+  top: 0; /* You can adjust the top position as needed */
+  left: 0;
+  width: 100%; 
  
 }   
+
+
+.App{
+  height: 100%;
+}
