--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -10,8 +10,10 @@
   background-color: rgb(255, 255, 255);
   height: 65px;
   border-radius: 50px;
-  position: sticky;
+  position: fixed;
+  z-index: 1000;
   width: 98%;
+  top: 0;
 }
 
 nav ul {
