--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,17 @@
   box-sizing: border-box;
   
 }
-.content-containerr {
+/* .content-containerr {
   margin:  0 ;
   padding: 3px 0;
   height: 90px;
   background: #0e1338;
   position: fixed;
-  top: 0; /* You can adjust the top position as needed */
+  top: 0; 
   left: 0;
   width: 100%; 
  
-}   
+}    */
 
 
 .App{
