--- a/src/components/UserSidebar.css
+++ b/src/components/UserSidebar.css
@@ -12,7 +12,8 @@ body {
   .sidebar-user {
     background: #0E1338;
     color: #fff;
-    height: 90vh;
+    min-height: 650px;
+    height: auto;
     width: 300px;
     transition: all 0.5s;
   }
