--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -24,8 +24,8 @@
   position: fixed;
   top: 0; /* You can adjust the top position as needed */
   left: 0;
-  width: 100%; 
- 
+  width: 100%;
+  z-index: 1; 
 }  
 
 nav ul {
