--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -12,7 +12,7 @@ main {
 .sidebar {
   background: #0E1338;
   color: #fff;
-  height: 170vh;
+  height: auto;
   width: 300px;
   transition: all 0.5s;
 }
